# gluex-ksks

./: .gitignore  Justfile  README.md  pyproject.toml  slurm_job.sh  slurm_job_blue.sh  slurm_job_green.sh
analysis/: env.sh  version.xml
analysis/dselectors/: DSelector_bggen.C  DSelector_bggen.h  DSelector_phase_1.C  DSelector_phase_1.h  DSelector_phase_2.C  DSelector_phase_2.h
analysis/fits/: binned_fit_pz_masscut_chisqdof_2.0_mesons_fixed_3_1862378_50bins.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_fixed_3_1862378_50bins_unc.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_fixed_3_29099_50bins.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_fixed_3_29099_50bins_unc.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_fixed_3_487_50bins.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_fixed_3_487_50bins_unc.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_fixed_3_489_50bins.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_fixed_3_489_50bins_unc.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_fixed_3_491_50bins.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_fixed_3_491_50bins_unc.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_free_2_1862378_50bins.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_free_2_1862378_50bins_unc.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_free_2_29099_50bins.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_free_2_29099_50bins_unc.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_free_2_487_50bins.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_free_2_487_50bins_unc.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_free_2_489_50bins.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_free_2_489_50bins_unc.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_free_2_491_50bins.pkl  binned_fit_pz_masscut_chisqdof_2.0_mesons_free_2_491_50bins_unc.pkl  binned_fit_pz_masscut_chisqdof_3.0_None_fixed_3_1862378_50bins.pkl  binned_fit_pz_masscut_chisqdof_3.0_None_fixed_3_1862378_50bins_unc.pkl  (+1056 more)
dselectors/: DSelector_bggen.C  DSelector_phase_1.C  DSelector_phase_1.h  DSelector_phase_2.C  DSelector_phase_2.h
src/gluex_ksks/: __init__.py  __main__.py  pwa.py  (+6 more)
(+306 files in other folders)
