[project]
name = "gluex-ksks"
version = "0.1.0"
description = "Analysis code for the KsKs analysis at GlueX"
readme = "README.md"
authors = [{ name = "Nathaniel Dene Hoffman", email = "dene@cmu.edu" }]
requires-python = ">=3.13"
dependencies = [
  "click>=8.2.0",
  "iminuit>=2.31.1",
  "laddu>=0.9.2",
  "matplotlib>=3.10.3",
  "modak>=0.3.7",
  "num2words>=0.5.14",
  "polars>=1.29.0",
  "scipy>=1.15.3",
  "uproot>=5.6.1",
]

[project.scripts]
gluex-init = "gluex_ksks.constants:mkdirs"
gluex-run-dselectors = "gluex_ksks.dselector:cli"
gluex-get-databases = "gluex_ksks.tasks.databases:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gluex_ksks = ["*.mplstyle"]

[tool.ruff]
target-version = "py313"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
